# core/src/main/resources/META-INF/openapi.json
@@ -636,6 +636,39 @@
           }
         }
       }
+    },
+    "/rest/tasks/by-correlation/{correlationID}/cancel" : {
+      "put" : {
+        "tags" : [ "Task endpoint" ],
+        "summary" : "Cancels execution of all the tasks belonging to a correlationID",
+        "operationId" : "cancelByCorrelationID",
+        "parameters" : [ {
+          "name" : "correlationID",
+          "in" : "path",
+          "required" : true,
+          "schema" : {
+            "pattern" : "\\S",
+            "type" : "string"
+          }
+        } ],
+        "responses" : {
+          "202" : {
+            "description" : "202"
+          },
+          "400" : {
+            "description" : "Invalid input parameters or validation error",
+            "content" : { }
+          },
+          "404" : {
+            "description" : "Can not find specified result",
+            "content" : { }
+          },
+          "500" : {
+            "description" : "Server error",
+            "content" : { }
+          }
+        }
+      }
     }
   },
   "components" : {
